--- a/blocks/root/page/header/header.css
+++ b/blocks/root/page/header/header.css
@@ -1,5 +1,6 @@
 @import url(__lang-link/__lang-link.css);
 @import url(__logo/__logo.css);
+@import url(__lang-link/_active/_active.css);
 
 .header {
     display: flex;
