--- a/blocks/root/page/header/__lang-link/__lang-link.css
+++ b/blocks/root/page/header/__lang-link/__lang-link.css
@@ -1,15 +1,18 @@
-@import url(_active/_active.css);
-
 .header__lang-link {
     text-decoration: none;
     color: white;
     font-size: 24px;
     line-height: 28px;
     font-weight: normal;
+    transition: 0.2s;
 }
 
 .header__lang-link:first-of-type {
     margin-right: 18px;
+}
+
+.header__lang-link:hover {
+    opacity: 80%;
 }
 
 @media screen and (max-width: 440px) {
