--- a/styles/index.css
+++ b/styles/index.css
@@ -12,12 +12,12 @@
 
 @font-face {
     font-family: "Inter";
-    src: url(/fonts/Inter-Regular.woff2);
+    src: url(./../fonts/Inter-Regular.woff2);
     font-weight: normal;
 }
 
 @font-face {
     font-family: "Inter";
-    src: url(/fonts/Inter-Black.woff2);
+    src: url(./../fonts/Inter-Black.woff2);
     font-weight: bold;
 }
